Trying to fix borders on mobile

--- a/styles/ImageGallery.module.css
+++ b/styles/ImageGallery.module.css
@@ -16,8 +16,11 @@
     max-height: 60vh;
 }
 
+.image_wrapper {
+    display: inline-block;
+}
+
     .gallery_item img {
-        position: relative;
         margin: auto;
         max-height: 85%;
         width:100%;
